<resources>
    <string name="app_name">AsthmaNew</string>
    <string name="category_Stats">Stats</string>
    <string name="category_graph">Graph</string>

    <string name="turbidity_fragment">Turbidity fragment</string>
    <string name="pH_fragment">pH fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Welcome">Welcome to   Aqua</string>
    <string name="desc">A smart app for   controling and monitoring   water usage in your house.</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <string name="sign_out">Sign Out</string>
    <string name="next">Next</string>
    <string name="turbdity">Turbdity</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">FCM Message</string>
    <string name="ph">pH</string>
    <string name="water_level">Water Level</string>
    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="bill">Bill</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="automatic">Automatic</string>
    <string name="manual">Manual</string>
    <string name="user_control">User Control</string>
    <string name="phone_number">Phone Number</string>
    <string name="sex">Sex</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password should be 6 or more characters</string>
    <string name="auth_failed">Wrong password or email</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Dont have an account? Sign up :)</string>
    <string name="btn_link_to_login">Already registered? Login :)</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Send Password reset email</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="prompt_password">Enter password?</string>
    <string name="forgot_password_msg">Please enter your email address so that we can send a password reset.</string>
    <string name="passwd_hint">password</string>
    <string name="view_my_profile">View my profile</string>
    <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the
        weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="log_token">Log Token</string>


    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">LOGIN</string>
    <string name="sign_up">Sign up</string>
    <string name="no_text"> </string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="log_in">Login</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="profile_name">Delaroy Studios</string>
    <string name="country_location">Lagos</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_online">Online</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="profile_names">Display name</string>
    <string name="induce_smile">Delaroy Studios</string>
    <string name="underlined"><u>Login</u></string>
    <string name="edit_profile_name">Name</string>
    <string name="edit_profile_country">Country</string>
    <string name="edit_profile_phone">Phone number</string>
    <string name="edit_profile_hobby">Hobby</string>
    <string name="select_date">Date</string>
    <string name="save_edit">Save edit</string>

</resources>