<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:weightSum="3">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="703dp"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:gravity="center_vertical">


        <LinearLayout
            android:id="@+id/email_password_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="gone">

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="389dp"
                android:layout_height="66dp"
                android:layout_weight="1"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:textColorHint="@color/colorPrimary" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="387dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:hint="@string/password"
                android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                android:inputType="textPassword"
                android:textColorHint="@color/colorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/phone_sex_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_password_fields"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:visibility="gone"
            android:paddingRight="16dp">

            <EditText
                android:id="@+id/edt_phone"
                android:layout_width="389dp"
                android:layout_height="59dp"
                android:layout_weight="1"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:drawableLeft="@drawable/ic_phone_black_24dp"
                android:textColorHint="@color/colorPrimary" />

            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="213dp"
                android:layout_height="59dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="Male"
                    android:textColor="@color/colorPrimary" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female"
                    android:textColor="@color/colorPrimary" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/email_password_buttons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_below="@+id/phone_sex_fields"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingTop="70dp"
            android:paddingRight="16dp">

            <Button
                android:id="@+id/btn_email_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:textColor="@color/colorAccent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/ic_vpn_key_black_24dp"
                android:text="@string/sign_in" />

            <Button
                android:id="@+id/btn_email_create_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:background="@android:color/transparent"
                android:textColor="@color/colorAccent"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_person_add_black_24dp"
                android:text="@string/create_account" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/layout_signed_in_control"
            android:layout_width="match_parent"
            android:layout_height="392dp"
            android:layout_centerInParent="true"
            android:background="@drawable/relative"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="visible">


            <Button
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="130dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="LungStatus"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/btn_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="110dp"
                android:layout_marginRight="240dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:drawableLeft="@drawable/ic_add_alarm_black_24dp"
                android:text="Add reminder"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/btn_sign_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="250dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/sign_out"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/btn_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="240dp"
                android:layout_marginTop="100dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:drawableLeft="@drawable/ic_account_circle_black_24dp"
                android:text="View Profile"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/btn_notif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="200dp"
                android:layout_marginTop="250dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="Notification"
                android:textColor="@android:color/black" />

        </RelativeLayout>


    </RelativeLayout>

</LinearLayout>